# pyllo_greeting

./: .gitignore  LICENSE  README-PTBR.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pyllo/: main.py  parser.py
src/pyllo/commands/: __init__.py  meta.py
src/pyllo_greeting/: main.py  parser.py
src/pyllo_greeting/commands/: __init__.py  greet.py  meta.py
tests/: test_commands.py  test_parser.py
