[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyllo_greeting"
description = "CLI application for testing Python distribution methods"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
authors = [
    { name = "João Antônio" }
]
license = "MIT"


[project.urls]
Homepage = "https://github.com/joao-antonio-la/pyllo_greeting"

[project.scripts]
pyllo = "pyllo_greeting.main:main"

[tool.setuptools.dynamic]
version = {attr = "pyllo_greeting.__version__"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"

testpaths = [
    "tests",
]

python_files = ["test_*.py"]
python_functions = ["test_*"]